--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   shimmer: ^2.0.0
   stream_transform: ^2.1.0
   url_launcher: ^6.1.8
+  datacollection: any
+  json_annotation: any
+  logger: any # log any value
+  retrofit: any # for generation dio route
 
 dev_dependencies:
   build_runner: ^2.3.3
@@ -56,6 +60,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.0
+  datacollection_generator: any
+  http_mock_adapter: any
+  retrofit_generator: any
+  json_serializable: '>4.4.0'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
