--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,39 +30,27 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.3.1
-  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.2
+  http: ^1.2.1  # Or the latest version
   dartz: ^0.10.1
-  dio: ^4.0.6
   equatable: ^2.0.5
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.1
   flutter_rating_bar: ^4.0.1
-  get_it: ^7.2.0
-  go_router: ^6.0.9
-  google_fonts: ^4.0.1
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
+  provider: ^6.0.5  # Or the latest version
+  go_router: ^14.2.0
+  google_fonts: ^6.2.1
   path_provider: ^2.0.12
-  readmore: ^2.2.0
-  shimmer: ^2.0.0
-  stream_transform: ^2.1.0
   url_launcher: ^6.1.8
-  datacollection: any
   json_annotation: any
-  logger: any # log any value
-  retrofit: any # for generation dio route
 
 dev_dependencies:
   build_runner: ^2.3.3
-  flutter_lints: ^2.0.0
+  flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-  hive_generator: ^2.0.0
   datacollection_generator: any
   http_mock_adapter: any
-  retrofit_generator: any
   json_serializable: '>4.4.0'
 
 # For information on the generic Dart part of this file, see the
@@ -91,3 +79,6 @@ flutter:
   #       - asset: assets/fonts/Poppins-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+ignored_advisories:
+  - GHSA-9324-jv53-9cc8
+  - GHSA-jwpw-q68h-r678
