--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   go_router: ^14.2.0
   google_fonts: ^6.2.1
   provider: ^6.0.5  # Or the latest version
-
+  intl: ^0.19.0  # Or the latest version available
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -55,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
