--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,7 @@ dependencies:
   google_fonts: ^6.2.1
   provider: ^6.0.5  # Or the latest version
   intl: ^0.19.0  # Or the latest version available
-
-
+  image_picker: ^1.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -67,7 +66,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
+  assets:
+    - assets/event_thumbnail.jpg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
