--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  vnpay_flutter: ^1.0.1 # Or the latest version
   equatable: ^2.0.5
   cached_network_image: ^3.3.1
   flutter_secure_storage: ^9.2.2  # Or the latest version
@@ -39,11 +40,13 @@ dependencies:
   go_router: ^14.2.0
   google_fonts: ^6.2.1
   provider: ^6.0.5  # Or the latest version
-  intl: ^0.19.0  # Or the latest version available
+  intl: ^0.17.0  # Or the latest version available
   image_picker: ^1.0.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  uni_links: ^0.5.1
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +71,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/event_thumbnail.jpg
+    - assets/user_image.jpg
+    - assets/product.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
